--- a/index.html
+++ b/index.html
@@ -7,17 +7,36 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
-    <script src="https://unpkg.com/vue"></script>
+    <script src="https://unpkg.com/vue@3"></script>
 </head>
 
 <body>
     <div id="app">
-        <div class="panel scores"></div>
-        <div class="panel result"></div>
+        <div class="panel scores">
+            <div class="score">
+                <h1>Player</h1>
+                <div class="life-bar">
+                    <div class="life" :class="{danger: playerLife < 20}" :style="{width: playerLife + '%'}"></div>
+                </div>
+                <div>{{ playerLife }}%</div>
+            </div>
+            <div class="score">
+                <h1>Monster</h1>
+                <div class="life-bar">
+                    <div class="life" :class="{danger: monsterLife < 20}" :style="{width: monsterLife + '%'}"></div>
+                </div>
+                <div>{{ monsterLife }}%</div>
+            </div>
+        </div>
+        <div v-if="hasResult" class="panel result">
+            <div v-if="monsterLife ===0" class="win">You won!!! :)</div>
+            <div v-else class="lose">You lose! :(</div>
+        </div>
         <div class="panel buttons"></div>
         <div class="panel logs"></div>
     </div>
     <script src="app.js"></script>
+
 </body>
 
 </html>
