--- a/index.html
+++ b/index.html
@@ -32,7 +32,15 @@
             <div v-if="monsterLife ===0" class="win">You won!!! :)</div>
             <div v-else class="lose">You lose! :(</div>
         </div>
-        <div class="panel buttons"></div>
+        <div class="panel buttons">
+            <template v-if="running">
+                <button @click="attack(false)" class="btn attack">Attack</button>
+                <button @click="attack(true)" class="btn especial-attack">Especial Attack</button>
+                <button class="btn heal">Heal</button>
+                <button @click="running = false" class="btn give-up">Give up</button>
+            </template>
+            <button v-else @click="startGame" class="btn new-game">New Game</button>
+        </div>
         <div class="panel logs"></div>
     </div>
     <script src="app.js"></script>
