--- a/index.html
+++ b/index.html
@@ -36,12 +36,16 @@
             <template v-if="running">
                 <button @click="attack(false)" class="btn attack">Attack</button>
                 <button @click="attack(true)" class="btn especial-attack">Especial Attack</button>
-                <button class="btn heal">Heal</button>
+                <button @click="healAndHurt" class="btn heal">Heal</button>
                 <button @click="running = false" class="btn give-up">Give up</button>
             </template>
             <button v-else @click="startGame" class="btn new-game">New Game</button>
         </div>
-        <div class="panel logs"></div>
+        <div v-if="logs.length" class="panel logs">
+            <ul>
+                <li v-for="log in logs" class="log" :class="log.cls">{{ log.text }}</li>
+            </ul>
+        </div>
     </div>
     <script src="app.js"></script>
 
